<resources>
    <string name="app_name">NfcSecureMessage</string>
    <string name="message_tag_detected">NFC tag detected!</string>
    <string name="message_read_tag">read NFC tag</string>
    <string name="message_write_tag">Writing to Tag...</string>
    <string name="message_tap_tag">Tap the NFC Tag to your device !</string>
    <string name="hint_message">Message</string>
    <string name="message_write_progress">Writing to Tag...</string>
    <string name="message_write_success">Successfully written to Tag !</string>
    <string name="message_write_error">Error Writing Message !</string>
    <string name="loading">Loading...</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="enter_the_password_again">Enter the Password again</string>
    <string name="enterPasswordText">The password must contain at least:\n   - 1 lowercase alphabetical character\n   - 1 uppercase alphabetical character\n   - 1 numeric character\n   - 1 special character\n   - 8 characters or longer</string>
    <string name="confirm">CONFIRM</string>
    <string name="saved_encrypted_password">saved_encrypted_password</string>
    <string name="enter">ENTER</string>
    <string name="enter_password">Enter Password</string>
    <string name="btnSend">send</string>
    <string name="write_your_message_here">write your message here</string>
    <string name="message_cell">message cell</string>
    <string name="generate_new_encrypted_nfc_tag">Generate new encrypted Nfc tag!</string>
    <string name="encryption_mode_for_your_nfc_tag">Please select the encryption mode for your nfc tag:</string>
    <string name="cesar_cipher">Cesar Cipher</string>
    <string name="please_choose_a_integer_key">Please choose a Integer key</string>
    <string name="please_enter_your_name">Please enter your Name</string>
    <string name="example_john">Example: John</string>
    <string name="please_enter_a_password_to_encrypt_your_key">Please enter a password to encrypt your key</string>
    <string name="logintxt">login</string>
    <string name="passtxt">password</string>
    <string name="validBtn">Connect</string>
    <string name="registerBtn">Register</string>
    <string name="nfc_secure_message">Nfc Secure Message</string>
    <string name="retourBtn">Go to Login</string>
    <string name="inscriptionBtn">Register</string>
    <string name="register_new_user">Register new user</string>
    <string name="confirmLc">confirm</string>
    <string name="voidLogin">Login can\'t be empty!</string>
    <string name="voidPass">Password can\'t be empty!</string>
    <string name="successfulConnection">Connection Successful</string>
    <string name="access_token" />
    <string name="wrongLoginOrPassword">Wrong Login or Password</string>
    <string name="successfulRegister">Register successful</string>
    <string name="loginAlreadyExists">this login already exists</string>
    <string name="message_not_send">message not send!</string>
    <string name="success">Success</string>
    <string name="login_alias" />
    <string name="read_inbox">READ INBOX</string>
    <string name="unable_to_fetch_messages">unable to fetch messages</string>
    <string name="fetch_successful">fetch successful</string>
    <string name="inboxMessageTxt">Here is your Inbox: \n-click on Read button \n-tag with your nfc tag to decrypt the messages \n-then select the messages that are readable</string>
    <string name="badKey">Bad Key!</string>
    <string name="read_nfc">Read</string>
    <string name="part_2">Part 2</string>
    <string name="part_1">Part 1</string>
    <string name="please_tag">Please exchange your generated tag with your friends one\n then click on Read Friends Tag button and finally on the Finish button\nAfter success keep the friends tag for yourself, you will need it ...</string>
    <string name="read_friend_tag">Read Friend tag</string>
    <string name="finish">Finish</string>
    <string name="Vigenere_cipher">Vigenere Cipher</string>
    <string name="AES_cipher">AES Cipher</string>
</resources>
