<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLogin_register"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/part_1"
        android:textSize="80sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="35dp"
        android:text="CREATE A PASSWORD FOR APPLICATION"
        android:textColor="#fff"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"

        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorBackgroundDark"
        tools:context=".CreatePasswordActivity">

        <EditText
            android:id="@+id/createPasswordEdi"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/rounded_editext_register_login"
            android:ems="10"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>


        <EditText
            android:id="@+id/createPasswordEdi2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_editext_register_login"
            android:ems="10"
            android:hint="@string/enter_the_password_again"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/createPasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/rounded_button_valid"
            android:text="@string/confirm"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <TextView
            android:id="@+id/createPasswordView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterPasswordText" />

    </LinearLayout>
</LinearLayout>