<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="470dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#abc"
    android:layout_marginTop="25dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="25dp"
    tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="#fff"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="35dp"
            android:text="@string/register_new_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="330dp"
            android:gravity="center_horizontal"
            android:background="#ccc"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/logintxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/logintxt" />

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rounded_editext_register_login"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/passtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/passtxt" />

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rounded_editext_register_login"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/pass2txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/confirmLc" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rounded_editext_register_login"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/inscriptionBtn"
                android:text="@string/inscriptionBtn"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:background="@drawable/rounded_button_register"

                android:layout_margin="8dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/retourBtn"
                android:text="@string/retourBtn"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:background="@drawable/rounded_button_register"
                android:layout_height="wrap_content" />
        </LinearLayout>
</LinearLayout>