<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_read"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_button_valid"
        android:text="@string/message_read_tag" />/>

    <Button
        android:id="@+id/btn_generateNfcTag"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_read"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_button_valid"
        android:text="@string/generate_new_encrypted_nfc_tag" />/>

    <Button
        android:id="@+id/btn_inbox"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_generateNfcTag"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_button_valid"
        android:text="@string/read_inbox" />

</RelativeLayout>